--- a/style.css
+++ b/style.css
@@ -7,27 +7,26 @@ header {
     font-size: 18px;
     color:peachpuff;
     font-weight: bolder;
-    border: 15px solid;
 
 }
 
-img {
+img, .images {
     padding: 25px;
     margin: 10px;
     display: flex;
     width: 150px;
     height: 125px;
+    display: initial; 
 
 }
 
 button {
     margin: 10px;
-    width: 275px;
+    width: 218px;
     height: 45px;
-    border: 0 solid;
     margin-top: 280px;
-    margin-right: -150px;
-    background-color: peru;
+    margin-right: 31px;
+    background-color:brown;
     color: white;
 }
 
@@ -46,4 +45,24 @@ button {
     text-emphasis-style: none;
     color: burlywood;
     font-style: oblique;
+}
+
+.images {
+    display: inline-flex;
+    border: initial;
+}
+
+.info {
+    display: flex;
+    flex-direction: initial;
+    color: brown;
+    font-style: oblique;
+    background: bisque;
+    padding: 15px;
+}
+.body {
+    color: blue;
+    text-align: center;
+    font-style: italic;
+    margin-top: 250px;
 }
