--- a/blackjack-game/styles.css
+++ b/blackjack-game/styles.css
@@ -5,13 +5,20 @@ body{
 
 .container {
     background-color: green;
+    background-image:url(images/blackjack.jpg);
+    background-size: cover;
+    background-position: center;
     text-align: center;
-    color: white;
+    color: rgb(240, 245, 239);
     align-items: center;
     font-style: italic;
     border: black solid 1px;
     margin: 150px;
+    width: 50%;
    
+}
+#reset {
+    display: none;
 }
 
 .heading {
@@ -22,7 +29,7 @@ body{
 button {
     background-color: yellow;
     font-weight: bold;
-    color: #016f32;
+    color: #011d0d;
     align-items: center;
     width: 150px;
     align-self: center;
