--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -3,19 +3,15 @@ MAIN DESIGN
 ===*/
 body{
     margin: 0;
+    padding: 0;
 }
 .container {
-    display: flex;
-    width: fit-content;
-}  
-.conta-el {
+    margin: 0;
+    width: 100%;
     background-image: url(/landing-page/img/tech.jpeg);
     background-position: center;
     background-size: cover;
 
-}
-.cont-el{
-     // background-image: linear-gradient(50deg, white, rgb(155, 92, 92), rgb(163, 148, 148))
 }
 
 button {
@@ -28,24 +24,15 @@ button {
 }
 
 button:hover, cursor{
-    background-color: greenyellow
+    background-color: rgb(121, 12, 223)
 }
-
-.order {
-    display: flex;
-    margin: 150px;
-}
-
-/*====SIDE 1 with background picture==*/
 
 .base {
     letter-spacing: 3px;
     font-size: 45px;
     font-weight: 900;
-    margin-top: 100px;
-    margin-bottom: 0;
-   
-    color: rgb(247, 246, 248);
+    margin-bottom: 0;   
+    color: rgb(181, 126, 236);
     }
 .ideal {
     font-size: 18px;
@@ -53,59 +40,44 @@ button:hover, cursor{
     color: #a6ebd6;
 }
 .sub {
-    margin: 250px 35px 0 15px;
+    margin: 250px 35px 0px 15px;
     font-weight: 900;
-    color: #1a1212;
+    padding-bottom: 170px;
+    color: #e9d0d0;
     font-size: 21px;
-    text-align: justify;
+    text-align: center;
 }
 .info {
-    margin: 120px 0px 0 100px ;
+    margin: 120px 0px 0 180px ;
     text-align: center;
     font-style: italic;
     font-weight: 900;
-    color: rgb(253, 7, 40);
+    color: rgb(233, 155, 53);
     font-size: 28px;
 }
-.bottom {
-    margin: 200px 100px 50px 100px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-}
 
-/*====SIDE 2 without background picture==*/
 .subscriber {
     margin: 10px 80px 20px 120px;
     font-size: 16px;
     background-color: red;
+    align-content: flex-end;
 
-}
-input {
-    margin: 10px;
-    padding: 10px;
-    border-radius: 10px;
-    font-size: 15px;
-}
-
-.plain-text {
-    margin: 150px 50px 10px 50px;
-    padding: 20px;
-    font-size: 22px;
-    color: rgb(1, 1, 2);
 }
 
 .tick {
     width: 28px; height: auto;
     margin-left: 100px;
     margin-right: 10px;
+    
+}
+.green-tick{
+   
+    margin-left: 50px;
 }
 
 .bullets {
-    display: flex;
-    flex-direction: row;
+    display:flex;
     font-size: 21px;
     margin-bottom: 0;
-    padding: 0;
+    color: rgb(235, 252, 1);
 }
