--- a/carousel/styles.css
+++ b/carousel/styles.css
@@ -49,11 +49,15 @@ img {
 
 /* THE MESSAGE */
 
-.message{
+.message, .message-brazil{
     position: absolute;
     color: black;
     font-size: 45px;
     padding: 10px 0 0 20px ;
+}
+
+.message-brazil {
+    color: gold;
 }
 
 /* THE DOTS */
@@ -86,4 +90,27 @@ img {
 /* making the dots darker than the others whe on current */
 .carousel-indicators.current-slide {
 background-color: rgb(0, 0, 0, .75);
+}
+
+/* Places to visit */
+
+.place, .place-america, .place-india,.place-france, .place-brazil {
+    position: absolute;
+    top: 80%;
+    margin-left: 50px;
+    font-size: 28px;
+    font-weight: 900;
+}
+
+.place-america{
+color: green;
+}
+.place-india{
+    color: pink;
+}
+.place-brazil {
+    color: gold;
+}
+.place-france {
+    color: blue;
 }
