--- a/lotto-game/styles.css
+++ b/lotto-game/styles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-image: url(/lotto-game/img/lotto.jpg);
+    background-image: url(/Landing-Page/lotto-game/img/lotto.jpg);
     background-position: center;
     background-size: cover;
 }
