--- a/color-scheme-generator/styles.css
+++ b/color-scheme-generator/styles.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url(/Landing-Page/color-scheme-generator/img/background.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
 #container {
     
     width: 500px;
@@ -10,36 +16,51 @@ h1{
 #get-color, #color-mode{
     padding: 0.5em;
     border-radius: 5px;
+    margin: 20px 0 0 55px;
     border: none;
     cursor: pointer;
-    background: #3a4a5a;
-    color: white;
+    background: #910763;
+    color: rgb(221, 211, 211);
+    font-size: 16px;
 }
 
 #color-schemes {
-    border: red solid ;
     display: flex;
     flex-direction: row;
 }
 
+/* background to the button - click the code */
 .info{
-    background: #d3c993;
+    
     text-align: center;
     font-size: 1.1em;
     padding: 0.8em 0;
     margin-bottom: 2em;
     margin-top: 20px;
 }
+/* written color code below */
 .cod-color{
     border: none;
     text-align: center;
     font-family: inherit;
     cursor: pointer;
-}
-
+    font-weight: 900;
+    font-size: 16px;
+    }
+/* the color paletes */
 .colors {
-    width: 40px;
-    height: 200px;
+    width: 100px;
+    height: 252px;
     margin: 0;
-    border: solid green;
+}
+/* click to copy button */
+#info-copy {
+    background-color: rgb(34, 185, 34);
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    padding: 15px;
+}
+#info-copy:hover {
+    background-color: #910763;
 }
