--- a/movie-watchlist/styles.css
+++ b/movie-watchlist/styles.css
@@ -2,9 +2,9 @@ body, html {
     margin: 50px;
     padding: 0;
 }
-
-.form {
-    border: solid black 2px;
+/* search form */
+.container{
+  border: solid rgb(15, 15, 15) 1px; 
     width: 550px;
     height: 780px;
 }
@@ -12,29 +12,62 @@ body, html {
 .header {
 display: flex;
 padding: 30px;
-margin-right: 20px;
-border: solid green 2px;
+}
+
+h2 a , h2{    
+    color: white;
 }
 
 h2 a {
-    padding-left: 120px;
-    color: white;
+    margin-left: 200px;
 }
 .search-button{
-    border: blue solid 1px;
+   
     background-image: url(/Landing-Page/movie-watchlist/img/movies.jpg);
     background-position: center;
     background-size: cover;
     margin: 0;
 }
-button {
-    width: 120px;
-    height: 40px;
-    background-color: goldenrod;
-    border-radius: 10px;
-    color: rgb(3, 2, 2);
+
+/* Style the submit button */
+#search-btn {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none; /* Prevent double borders */
+    cursor: pointer;
+  }
+#search-btn:hover{
+    background-color: red;
 }
 
-input {
+/* Style the search field */
+#search-input {
     padding: 10px;
-}
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+  }
+
+/* Clear floats */
+  form.form::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  form {
+    display: flex;
+  }
+
+  /* label */
+  .hide {
+    display: none;
+  }
+/* watchlist */
