--- a/dashboard-api/styles.css
+++ b/dashboard-api/styles.css
@@ -32,3 +32,13 @@ main {
     justify-content: space-between;
 }
 
+#crypto-top{
+    display: flex;
+    flex-direction: row;
+}
+
+#prices {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
