--- a/movie-watchlist/styles.css
+++ b/movie-watchlist/styles.css
@@ -7,7 +7,7 @@ body, html {
   border: solid rgb(15, 15, 15) 1px; 
     width: 550px;
     height: 780px;
-    background-color: green;
+    background-color: rgb(196, 204, 196);
 }
 
 .header {
