--- a/color-picker/styles.css
+++ b/color-picker/styles.css
@@ -16,6 +16,8 @@ html, body {
 }
 
 .my-color {
-    height: 20%;
-    width: 20%;
+    height: 10%;
+    width: 10%;
+    font-size: 10px;
+    /* height: auto; */
 }
