--- a/online-users/styles.css
+++ b/online-users/styles.css
@@ -6,7 +6,7 @@ body{
 .my-online-user {
    border: solid rgb(7, 7, 7) 1px;
    font-size: 1.5rem;
-   width: 30%;
+   width: 60%;
    display: flex;
    flex-direction: row-reverse;
    padding: 5px;
@@ -18,7 +18,7 @@ body{
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    margin: auto;
+    margin-right: auto;
 }
 
 .user-username{
